# terrabase2

./: .dockerignore  .gitignore  .prettierignore  .railwayignore  CONFIGURATION_STRATEGY.md  CONTAINERIZATION_STRATEGY.md  Dockerfile  Dockerfile.railway  HYBRID_DEPLOYMENT_GUIDE.md  PR_DESCRIPTION.md  README.md  TURBO_README.md  VERCEL_DEPLOYMENT_GUIDE.md  debug_color_analysis.py  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-asset-gen-all-variants.js  test_color_analysis_simple.py  test_color_analysis_v2.py  test_frontend_api.js  test_v2_integration.js  turbo.json  update-flow-colors.js  update_colors.js  update_colors_direct.js  vercel.json
railway-deploy/: Dockerfile  Dockerfile.backup  Procfile  QUICK_START.md  debug_startup.py  docker-compose.yml.backup  env.example  nginx.conf  nixpacks.toml  package.json  pyproject.toml  railway.json  railway.toml  requirements.txt  test_env.py  test_health_server.py  test_server.py
railway-deploy/compute-functions/scripts/: background_removal.py  enhancement.py
railway-deploy/deploy/: DEPLOYMENT_CHECKLIST.md  deploy.sh  docker-compose.prod.yml  railway-deploy.md  railway.toml
railway-deploy/docs/: API_PATHS.md  DEPLOYMENT.md  FILE_NAMING_CONVENTION.md
railway-deploy/scripts/: deploy.sh  download_models.py
railway-deploy/src/: main.py  main_minimal.py  main_safe.py
railway-deploy/src/api/: asset_pack.py  background_removal.py  banner_generator.py  cost_optimized_processor.py  (+4 more)
railway-deploy/storage/: errors.jsonl  requests.jsonl  results.jsonl
railway-deploy/tests/: conftest.py
(+728 files in other folders)
